# LinkedIn-Ads-Agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  api_docs.md  bootstrap.py  cli.py  compose.override.yml  compose.yml  linkedin-ads-action-center.md  main.py  pyproject.toml  ui.py
.github/workflows/: ci.yml
.interface-design/: system.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_missing_columns.py  0003_add_content_name.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/crud/: accounts.py  campaigns.py  demographics.py  metrics.py  sync_log.py
backend/app/errors/: exceptions.py
backend/app/linkedin/: client.py  constants.py  fetchers.py  metrics.py
backend/app/models/: __init__.py  ad_account.py  campaign.py  creative.py  demographics.py  linkedin_api.py  metrics.py  responses.py  sync.py
backend/app/routes/: __init__.py  auth.py  health.py  report.py  status.py  sync.py
backend/app/services/: snapshot.py  sync.py
backend/app/utils/: logging.py  urn_resolve.py
backend/tests/: conftest.py  test_auth.py  test_client.py  test_crud.py  test_errors.py  test_routes.py
docs/: arch.md  ingestion_best_pratices.md  ingestion_optimization.md  linkedin-ads-action-center-poc-plan.md  linkedin-oauth-key-concepts.md  summary.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
node-app/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
scripts/: install_uv.ps1
tests/: conftest.py  test_auth_manager.py  test_client.py  test_errors.py  test_ingestion_pipeline.py  test_logger.py  test_repository.py
(+127 files in other folders)
